--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <!-- Splitting CSS -->
     <link rel="stylesheet" href="css/splitting.css" />
+    <link rel="stylesheet" href="css/splitting-cells.css" />
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -84,9 +85,10 @@
         </section>
       </main>
     </section>
-    <!-- Typed.js and splitting.js combined-->
-    <script src="js/vendors.js"></script>
+    <!-- Typed.js and splitting.js -->
+    <script src="js/splitting.min.js"></script>
+    <script defer src="js/typed.js@2.0.11"></script>
     <!-- Main Script-->
-    <script src="js/main.js"></script>
+    <script defer src="js/main.js"></script>
   </body>
 </html>
