changed effect and positioned absolute

--- a/index.html
+++ b/index.html
@@ -49,29 +49,29 @@
           <li><a href="pages/contact.html" title="Contact">contact</a></li>
         </nav>
       </header>
-      <main class="flex-grow-1">
+      <main>
         <section class="portfolio_slider">
           <ul class="portfolio_slider_images">
             <li style="background-image: url(images/portfolio/wake-up.jpg);">
-              <h1 class="zip-it" data-splitting>Wakey wake</h1>
+              <h1 class="slide-horizontal" data-splitting>Wakey wake</h1>
             </li>
             <li style="background-image: url(images/portfolio/blue-bag.jpg);">
-              <h1 class="zip-it" data-splitting>Saints Bag</h1>
+              <h1 class="slide-horizontal" data-splitting>Saints Bag</h1>
             </li>
             <li style="background-image: url(images/portfolio/face-side.jpg);">
-              <h1 class="zip-it" data-splitting>67 Jewelry</h1>
+              <h1 class="slide-horizontal" data-splitting>67 Jewelry</h1>
             </li>
             <li
               style="background-image: url(images/portfolio/yellow-book.jpg);"
             >
-              <h1 class="zip-it" data-splitting>Nasty Paper</h1>
+              <h1 class="slide-horizontal" data-splitting>Nasty Paper</h1>
             </li>
             <li style="background-image: url(images/portfolio/vui.jpg);">
-              <h1 class="zip-it" data-splitting>Pluch</h1>
+              <h1 class="slide-horizontal" data-splitting>Pluch</h1>
             </li>
 
             <li style="background-image: url(images/portfolio/logo-a.jpg);">
-              <h1 class="zip-it" data-splitting>Vpside down</h1>
+              <h1 class="slide-horizontal" data-splitting>Vpside down</h1>
             </li>
           </ul>
           <ul class="portfolio_slider_navigation">
