--- a/pages/about.html
+++ b/pages/about.html
@@ -53,7 +53,7 @@
         </nav>
       </header>
       <main>
-        <section class="container-fluid">
+        <section class="container-fluid" id="about"
           <div class="content">
             <div class="with-sidebar">
               <!-- intermediary wrapper -->
