letter slide in fixed

--- a/index.html
+++ b/index.html
@@ -53,25 +53,25 @@
         <section class="portfolio_slider">
           <ul class="portfolio_slider_images">
             <li style="background-image: url(images/portfolio/wake-up.jpg);">
-              <h1 class="slide-horizontal" data-splitting>Wakey wake</h1>
+              <h1 class="slide-in" data-splitting>Wakey wake</h1>
             </li>
             <li style="background-image: url(images/portfolio/blue-bag.jpg);">
-              <h1 class="slide-horizontal" data-splitting>Saints Bag</h1>
+              <h1 class="slide-in" data-splitting>Saints Bag</h1>
             </li>
             <li style="background-image: url(images/portfolio/face-side.jpg);">
-              <h1 class="slide-horizontal" data-splitting>67 Jewelry</h1>
+              <h1 class="slide-in" data-splitting>67 Jewelry</h1>
             </li>
             <li
               style="background-image: url(images/portfolio/yellow-book.jpg);"
             >
-              <h1 class="slide-horizontal" data-splitting>Nasty Paper</h1>
+              <h1 class="slide-in" data-splitting>Nasty Paper</h1>
             </li>
             <li style="background-image: url(images/portfolio/vui.jpg);">
-              <h1 class="slide-horizontal" data-splitting>Pluch</h1>
+              <h1 class="slide-in" data-splitting>Pluch</h1>
             </li>
 
             <li style="background-image: url(images/portfolio/logo-a.jpg);">
-              <h1 class="slide-horizontal" data-splitting>Vpside down</h1>
+              <h1 class="slide-in" data-splitting>Vpside down</h1>
             </li>
           </ul>
           <ul class="portfolio_slider_navigation">
