contact icon set , img shadow

--- a/pages/about.html
+++ b/pages/about.html
@@ -65,7 +65,7 @@
                       <img
                         alt="Riaz"
                         src="../images/about/profile.jpg"
-                        class="mt-lg"
+                        class="mt-lg shadow"
                       />
                     </div>
                     <h4>MD Riaz</h4>
