--- a/pages/blog.html
+++ b/pages/blog.html
@@ -60,6 +60,7 @@
             <a href="#" class="blog-item">
               <h2>Beautiful gray</h2>
               <img
+                class="shadow"
                 src="../images/portfolio/architecture-1.jpg"
                 alt="Project Image"
               />
@@ -72,6 +73,7 @@
             <a href="#" class="blog-item">
               <h2>The other side of design</h2>
               <img
+                class="shadow"
                 src="../images/portfolio/face-side.jpg"
                 alt="Project Image"
               />
@@ -83,7 +85,11 @@
 
             <a href="#" class="blog-item">
               <h2>Practice more and be crazy</h2>
-              <img src="../images/portfolio/logo-a.jpg" alt="Project Image" />
+              <img
+                class="shadow"
+                src="../images/portfolio/logo-a.jpg"
+                alt="Project Image"
+              />
               <div class="info">
                 <div class="author">By Ben Bryden on November 27, 2016</div>
                 <div class="tag">Design, Photography</div>
