--- a/pages/work-single.html
+++ b/pages/work-single.html
@@ -66,14 +66,20 @@
           </div>
         </section>
         <section class="content">
-          <img alt="Project" src="../images/portfolio/single/a-logo.jpg"">
+          <img class="shadow" alt="Project"
+          src="../images/portfolio/single/a-logo.jpg"">
 
           <div class="columns" style="--s: 1rem;">
             <div class="col" style="--w: 33.5%;">
-              <img src="../images/portfolio/single/scp.jpg" alt="Project" />
+              <img
+                class="shadow"
+                src="../images/portfolio/single/scp.jpg"
+                alt="Project"
+              />
             </div>
             <div class="col" style="--w: 66.5%;">
               <img
+                class="shadow"
                 src="../images/portfolio/single/necklace.jpg"
                 alt="Project"
               />
