--- a/pages/contact.html
+++ b/pages/contact.html
@@ -82,6 +82,79 @@
               ><span class="p-md">* These fields are required</span>
               <p class="response"></p>
             </form>
+            <div class="contact-links">
+              <a
+                href="https://github.com/md-riaz?tab=repositories"
+                class="contact-link"
+              >
+                <span class="contact-icon">
+                  <svg
+                    class="case-item-icon icon-github"
+                    fill="currentColor"
+                    width="62"
+                    height="60"
+                    viewBox="0 0 62 60"
+                  >
+                    <path
+                      d="M31 0a30.7 30.7 0 0 0-9.8 59.9c1.55.3 2.116-.6 2.116-1.4s-.026-2.7-.042-5.3c-8.622 1.9-10.44-4.1-10.44-4.1-1.414-3.5-3.448-4.5-3.448-4.5-2.815-1.9.213-1.9.213-1.9a6.74 6.74 0 0 1 4.746 3.2c2.766 4.7 7.254 3.3 9.023 2.6a6.3 6.3 0 0 1 1.966-4.1c-6.88-.8-14.12-3.5-14.12-15.2a11.964 11.964 0 0 1 3.193-8.3 10.9 10.9 0 0 1 .3-8.1s2.6-.9 8.525 3.1a30.617 30.617 0 0 1 15.522 0c5.92-4 8.517-3.1 8.517-3.1a10.886 10.886 0 0 1 .308 8.1 11.946 11.946 0 0 1 3.186 8.3c0 11.8-7.248 14.4-14.155 15.1a7.52 7.52 0 0 1 2.1 5.7c0 4.1-.04 7.5-.04 8.5 0 .8.56 1.7 2.13 1.4A30.708 30.708 0 0 0 31 0"
+                    ></path>
+                  </svg>
+                </span>
+              </a>
+              <a href="https://twitter.com/MDRiaz53949149" class="contact-link">
+                <span class="contact-icon">
+                  <svg
+                    class="contact-icon twitter-icon-svg"
+                    fill="currentColor"
+                    width="60"
+                    height="49"
+                    viewBox="0 0 60 49"
+                  >
+                    <path
+                      d="M60 5.8a32.794 32.794 0 0 1-7.02 2A12.573 12.573 0 0 0 58.416.9a22.046 22.046 0 0 1-7.924 3A11.967 11.967 0 0 0 41.435 0 12.256 12.256 0 0 0 29.21 12.4a11.72 11.72 0 0 0 .225 2.8A34.736 34.736 0 0 1 4.075 2.1 11.406 11.406 0 0 0 2.49 8.3a12.24 12.24 0 0 0 5.436 10.3 12.607 12.607 0 0 1-5.66-1.6v.3a12.426 12.426 0 0 0 9.96 12.1 11.632 11.632 0 0 1-3.168.5 7.87 7.87 0 0 1-2.265-.2 12.483 12.483 0 0 0 11.548 8.7 23.817 23.817 0 0 1-15.4 5.3A14.578 14.578 0 0 1 0 43.5 35.742 35.742 0 0 0 18.79 49c22.64 0 35.094-19.1 35.094-35.7v-1.6a16.4 16.4 0 0 0 6.113-5.9z"
+                    ></path>
+                  </svg>
+                </span>
+              </a>
+              <a href="https://web.facebook.com/mdriaz.wd" class="contact-link">
+                <span class="contact-icon icon-fb">
+                  <svg
+                    fill="currentColor"
+                    viewBox="0 0 50 50"
+                    width="50px"
+                    height="50px"
+                  >
+                    <path
+                      d="M25,3C12.85,3,3,12.85,3,25c0,11.03,8.125,20.137,18.712,21.728V30.831h-5.443v-5.783h5.443v-3.848 c0-6.371,3.104-9.168,8.399-9.168c2.536,0,3.877,0.188,4.512,0.274v5.048h-3.612c-2.248,0-3.033,2.131-3.033,4.533v3.161h6.588 l-0.894,5.783h-5.694v15.944C38.716,45.318,47,36.137,47,25C47,12.85,37.15,3,25,3z"
+                    />
+                  </svg>
+                </span>
+              </a>
+              <a
+                href="https://www.linkedin.com/in/md-riaz-1303971b1/"
+                class="contact-link"
+              >
+                <span class="contact-icon icon-linkedin">
+                  <svg fill="currentColor" viewBox="0 0 50 50">
+                    <path
+                      d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z"
+                    />
+                  </svg>
+                </span>
+              </a>
+              <a href="mailto:mdriazwd@gmail.com" class="contact-link">
+                <span class="contact-icon icon-email"
+                  ><svg viewBox="0 0 64 64">
+                    <path
+                      d="M32 .58A31.19 31.19 0 0 0 18 3.85a1 1 0 1 0 .9 1.79A29.14 29.14 0 0 1 32 2.58 29.43 29.43 0 0 1 56.45 48.37a1 1 0 0 0 .27 1.39 1.07 1.07 0 0 0 .56.17 1 1 0 0 0 .83-.44A31.43 31.43 0 0 0 32 .58zM54.17 51.34a28 28 0 0 1-2.83 2.83 1 1 0 0 0-.09 1.41 1 1 0 0 0 .75.34 1 1 0 0 0 .66-.24 31.88 31.88 0 0 0 3-3 1 1 0 0 0-1.51-1.32zM48.75 56.2A29.43 29.43 0 0 1 9.62 12.89a1 1 0 0 0-1.52-1.3A31.43 31.43 0 0 0 49.89 57.84a1 1 0 0 0 .25-1.39A1 1 0 0 0 48.75 56.2zM11.34 10.67A1 1 0 0 0 12 10.4c.41-.38.82-.74 1.25-1.09A1 1 0 1 0 12 7.77c-.46.37-.9.76-1.34 1.16a1 1 0 0 0 .68 1.74zM14.94 7.81a1 1 0 0 0 .56-.17l.25-.17A1 1 0 1 0 14.64 5.8L14.37 6a1 1 0 0 0-.26 1.39A1 1 0 0 0 14.94 7.81z"
+                    />
+                    <path
+                      d="M53,18.63a.66.66,0,0,0,0-.15,1.55,1.55,0,0,0,0-.21,1.28,1.28,0,0,0-.14-.23.47.47,0,0,0-.06-.09h0a.88.88,0,0,0-.27-.19l0,0a.71.71,0,0,0-.25-.06l-.13,0H12l-.13,0a.71.71,0,0,0-.25.06l0,0a.88.88,0,0,0-.27.19h0a.47.47,0,0,0-.06.09,1.28,1.28,0,0,0-.14.23,1.55,1.55,0,0,0,0,.21.66.66,0,0,0,0,.15V45.39a1.74,1.74,0,0,0,.05.22.59.59,0,0,0,0,.17.47.47,0,0,0,.06.09,1.24,1.24,0,0,0,.17.23h0l.1.07a1.43,1.43,0,0,0,.21.12.65.65,0,0,0,.2,0,.9.9,0,0,0,.16,0H52a.9.9,0,0,0,.16,0,.65.65,0,0,0,.2,0,1.43,1.43,0,0,0,.21-.12l.1-.07h0a1.24,1.24,0,0,0,.17-.23.47.47,0,0,0,.06-.09.59.59,0,0,0,0-.17,1.74,1.74,0,0,0,0-.22V18.63ZM13,20.92,23.82,31,13,42.79ZM36.86,31.3a7.15,7.15,0,0,1-9.72,0L14.55,19.63h34.9Zm-11.57,1,.49.46a9.16,9.16,0,0,0,12.44,0l.49-.45,11,12H14.27ZM40.18,31,51,20.92V42.79Z"
+                    />
+                  </svg>
+                </span>
+              </a>
+            </div>
           </div>
         </section>
       </main>
