--- a/index.html
+++ b/index.html
@@ -89,6 +89,6 @@
     <script src="js/splitting.min.js"></script>
     <script defer src="js/typed.js@2.0.11"></script>
     <!-- Main Script-->
-    <script defer src="js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
